make test work with tag!!

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,34 @@
 cucumber.xml
 infinitest.filters
 target
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
+/bin
