add posibility to run in jenkins

--- a/.gitignore
+++ b/.gitignore
@@ -6,38 +6,6 @@ cucumber.xml
 infinitest.filters
 target
 /bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
-/bin
+build.xml
+junit/
+
